package my_base;

import ai.ui.Ui;
import base.PeriodicScheduler;
import shared.MainRouter;
import shared.routers.SpaceShooterRouter;

public class App {
//david test
    private static MainRouter mainRouter = new MainRouter();
    private static Ui ui;
    private static AppContent content = new AppContent();
    private static SpaceShooterRouter spaceRouter;
//david
    // ac: register application routers
    private static void registerRouters() {
        spaceRouter = new SpaceShooterRouter(content.getBackend());
        // ac: keeping it simple for the POC
    }

    public static AppContent content() { return content; }
    public static Ui UI() { return ui; }
    public static SpaceShooterRouter spaceRouter() { return spaceRouter; }

    public static void main(String[] args) throws Exception {
        content.initContent();
        ui = new Ui();
        ui.setUiPorts();
        registerRouters();
        ui.start(mainRouter);
        
        PeriodicScheduler scheduler = new PeriodicScheduler();
        scheduler.setPeriodicLoop(new MyPeriodicLoop());
        scheduler.start();
    }
}
//************************************* */
// package my_base;
// import ai.ui.Ui;
// import base.PeriodicScheduler;
// import shared.MainRouter;
// import shared.routers.Ex3Router;

// public class App {

//     private static MainRouter mainRouter = new MainRouter();
//     private static Ui ui;
//     private static AppContent content = new AppContent();
    
//     // TO_DO: Register all routers here
//     private static void registerRouters() {
//         mainRouter.addRouter("ex3", new Ex3Router());
//     }

//     // Allows all classes in teh system to access content
//     // entities from everywhere.
//     public static AppContent content() {
//         return content;
//     }
 
//     public static Ui UI() {
//         return ui;
//     }
 
//     public static void main(String[] args) throws Exception {
//         content.initContent();
//         ui = new Ui();
//         ui.setUiPorts();
//         registerRouters();
//         ui.start(mainRouter);
//         PeriodicScheduler scheduler = new PeriodicScheduler();
//         scheduler.setPeriodicLoop(new MyPeriodicLoop());
//         scheduler.start();
//     }

// }
