classDiagram
    class App {
        -MainRouter mainRouter
        -Ui ui
        -AppContent content
        -SpaceShooterRouter spaceRouter
        +main(args)
    }

    class AppContent {
        -SpaceShooterBackend backend
        +initContent()
        +getBackend()
    }

    class SpaceShooterRouter {
        -SpaceShooterBackend backend
        +route(path, queryParam)
    }

    class SpaceShooterBackend {
        -GameWorld gameWorld
        -SpaceShooterUiPort uiPort
        -CollisionManager collisionManager
        -SpawnManager spawnManager
        -DifficultyManager difficultyManager
        +setUiPort(port)
        +startGame()
        +pauseGame()
        +stopGame()
        +movePlayer(direction)
        +fireWeapon()
        +changeWorld(worldName)
        +gameTick()
    }

    class GameWorld {
        -PlayerShip playerShip
        -List enemies
        -List bullets
        -List bonuses
        -GameStats gameStats
        +addEnemy(enemy)
        +addBullet(bullet)
        +addBonus(item)
        +removeExpiredObjects()
        +clearAllEntities()
    }

    class PlayerShip {
        +setPosition(x, y)
        +updatePosition(dx, dy)
        +modifyHealth(amount)
        +decreaseAmmo()
        +increaseAmmo(amount)
    }

    class Enemy {
        +moveStep()
        +takeDamage(damage)
        +isOutOfBounds()
    }

    class Bullet {
        +moveStep()
        +isOutOfBounds()
    }

    class BonusItem {
        +moveStep()
        +applyEffect(playerShip)
        +consume()
    }

    class GameStats {
        +scoreUpdate(value)
        +advanceLevel()
        +updateTime(deltaTime)
        +resetState()
    }

    class CollisionManager {
        +checkCollisions()
    }

    class SpawnManager {
        +spawnEnemyIfNeeded()
        +spawnBonusIfNeeded()
    }

    class DifficultyManager {
        +updateDifficulty()
    }

    class SpaceShooterUiPort {
        <<interface>>
        +updatePlayerShip(x, y)
        +updateWorldBackground(worldName)
        +updateScore(score)
        +updateHealth(health, ammo)
        +showGameOver(finalScore)
        +addBullet()
        +renderFrame(enemies, bullets, bonuses)
        +hideGameOver()
    }

    class SpaceShooterUiPortImpl {
        -GameCanvasView drawingPanel
        -HUDView hudPanel
        +updatePlayerShip(x, y)
        +updateWorldBackground(worldName)
        +updateScore(score)
        +updateHealth(health, ammo)
        +showGameOver(finalScore)
        +addBullet()
        +renderFrame(enemies, bullets, bonuses)
        +hideGameOver()
    }

    class Ui {
        -GameCanvasView drawingPanel
        -HUDView hudPanel
        +setUiPorts()
        +start(router)
    }

    class GameCanvasView {
        +updateShipPosition(x, y)
        +setWorld(worldName)
        +updateGameObjects(enemies, bullets, bonuses)
    }

    class HUDView {
        +updateHUDData(score, health, ammo, level)
        +showGameOver()
        +hideGameOver()
    }

    class KeyboardInputHandler {
        +keyPressed(e)
        +keyReleased(e)
    }

    App --> AppContent
    App --> Ui
    App --> SpaceShooterRouter
    AppContent --> SpaceShooterBackend
    SpaceShooterRouter --> SpaceShooterBackend
    KeyboardInputHandler --> SpaceShooterRouter

    SpaceShooterBackend --> GameWorld
    SpaceShooterBackend --> CollisionManager
    SpaceShooterBackend --> SpawnManager
    SpaceShooterBackend --> DifficultyManager
    SpaceShooterBackend ..> SpaceShooterUiPort : updates via port

    GameWorld --> PlayerShip
    GameWorld --> Enemy
    GameWorld --> Bullet
    GameWorld --> BonusItem
    GameWorld --> GameStats

    Ui --> SpaceShooterUiPortImpl
    Ui --> GameCanvasView
    Ui --> HUDView
    SpaceShooterUiPortImpl ..|> SpaceShooterUiPort
    SpaceShooterUiPortImpl --> GameCanvasView
    SpaceShooterUiPortImpl --> HUDView
